# local-code-context

./: .gitignore  .index_ignore  MANIFEST.in  PLAN.md  README.md  TASK.md  THIRD_PARTY_NOTICES.md  TODO.md  flake.nix  mcp-call  pyproject.toml  shell.nix
LICENSES/: MIT.txt
evaluation/: benchmark.py  questions.json
models/: Modelfile.devstral-small-2-24b-8k  Modelfile.gpt-oss-20b-12k  Modelfile.qwen2.5-coder-14b-16k  Modelfile.qwen3-8b-24k  Modelfile.rnj-1-8b-24k
src/local_code_context/: __init__.py
src/local_code_context/db/: engine.py  models.py  schema.py  session.py
src/local_code_context/indexing/: __init__.py  indexer.py  watcher.py
src/local_code_context/mcp/: context.py  server.py  symbols.py
src/local_code_context/retrieval/: __init__.py  hybrid.py  lexical.py  models.py  query.py  query_intent.py  ranking.py
src/local_code_context/storage/: reader.py  resolver.py  schema.py  writer.py
src/local_code_context/syntax/: __init__.py  capture_models.py  capture_normalization.py  detection.py  extraction.py  indexer.py  legacy_python.py  models.py  parsers.py  rendering.py
src/local_code_context/syntax/hooks/: __init__.py  python.py  rust.py
src/local_code_context/syntax/queries/: __init__.py  python-tags.scm  rust-tags.scm  verilog-tags.scm
src/local_code_rag/: __init__.py  index_repos.py  languages.py  mcp_context.py  mcp_server.py  python_syntax.py  python_tags.scm  query.py  syntax_chunks.py  syntax_index.py  syntax_models.py  syntax_query.py  tree_sitter_support.py  watch_repos.py
src/local_code_rag/indexing/: indexer.py  watcher.py
src/local_code_rag/mcp/: __init__.py  context.py  server.py
src/local_code_rag/retrieval/: query.py
src/local_code_rag/syntax/: capture_normalization.py  detection.py  extraction.py  indexer.py  legacy_python.py  parsers.py  rendering.py
src/local_code_rag/syntax/hooks/: __init__.py  python.py  rust.py
src/local_code_rag/syntax/queries/: __init__.py  python-tags.scm  rust-tags.scm
tests/: test_call_sites.py  test_hybrid_retrieval.py  test_index_integration.py  test_index_repos.py  test_mcp_context.py  test_mcp_get_symbol.py  test_mcp_transport.py  test_retrieval_query.py  test_storage_xref.py  test_syntax_index.py  test_watch_repos.py
