[project]
name = "local-code-rag"
version = "0.1.0"
description = "Local multi-repo code retrieval with Chroma and Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "requests>=2.31.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
code-rag-index = "local_code_rag.index_repos:main"
code-rag-query = "local_code_rag.query:main"
code-rag-watch = "local_code_rag.watch_repos:main"
code-rag-mcp = "local_code_rag.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
