[project]
name = "local-code-rag"
version = "0.1.0"
description = "Local multi-repo code retrieval with Chroma and Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "requests>=2.31.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
code-rag-index = "local_code_rag.indexing.indexer:main"
code-rag-query = "local_code_rag.retrieval.query:main"
code-rag-watch = "local_code_rag.indexing.watcher:main"
code-rag-mcp = "local_code_rag.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"local_code_rag.syntax.queries" = ["*.scm"]

[tool.uv]
package = true
