[project]
name = "local-code-context"
version = "0.1.0"
description = "Local multi-repo code retrieval with tree-sitter and SQLite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter==0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-verilog>=1.0.3",
    "watchfiles>=1.0.0",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
code-context-index = "local_code_context.indexing.indexer:main"
code-context-watch = "local_code_context.indexing.watcher:main"
code-context-mcp = "local_code_context.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"local_code_context.syntax.queries" = ["*.scm"]

[tool.uv]
package = true
